--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <hr>
     <h2>@Container</h2>
     <h3>fluid container</h3>
-    <div> This is a fluid container and goes till the end</div>
+    <div class="container "> This is a fluid container and goes till the end</div>
     <h3>Centre container</h3>
-    <div >This is a centered container and it goes till specific width</div>
+    <div class="container container-centre" >This is a centered container and it goes till specific width</div>
     <hr>
     <h2>@links</h2>
-    <a href="/">Primary link</a>
-    <a href="/">Secondary link</a>
+    <a class="link link-primary" href="/">Primary link</a>
+    <a class="link link-secondary" href="/">Secondary link</a>
     <hr>
      <h2>@lists</h2>
      <h3>Unordered lists</h3>
@@ -59,7 +59,7 @@
 <hr>
 <h2>Header</h2>
 <header>
-    <img src="images/girl.svg">
+    <img src="images/undraw_web_development_w2vv.svg">
     <h1>heading inside header</h1>
 </header>
 <hr>
