--- a/index.html
+++ b/index.html
@@ -29,19 +29,20 @@
     <hr>
      <h2>@lists</h2>
      <h3>Unordered lists</h3>
-     <ul>
+     <p> This list will not have bullet</p>
+     <ul class="list-no-bullet">
          <li>Item one</li>
          <li>Item two</li>
          <li>Item three</li>
      </ul>
      <h3>Unordered inline lists</h3>
-     <ul>
-         <li>Inline item one</li>
-         <li>Inline item two</li>
-         <li>Inline item three</li>
+     <ul class="list-no-bullet">
+         <li class="list-item-inline">Inline item one</li>
+         <li class="list-item-inline">Inline item two</li>
+         <li class="list-item-inline">Inline item three</li>
      </ul>
      <h3>reverse ordered list</h3>
-     <ol>
+     <ol reversed>
          <li>apple</li>
          <li>bread</li>
          <li>milk</li>
