--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <h2>@lists</h2>
      <h3>Unordered lists</h3>
      <p> This list will not have bullet</p>
-     <ul class="list-no-bullet">
+     <ul class="list-no-bullet ">
          <li>Item one</li>
          <li>Item two</li>
          <li>Item three</li>
@@ -49,19 +49,19 @@
      </ol>
 <hr>
 <h2>@nav</h2>
-<nav>
-    <div>IamBrand</div>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/">products</a></li>
-        <li><a href="/">about</a></li>
+<nav class="navigation container">
+    <div class="nav-brand">IamBrand</div>
+    <ul class="list no-bullet nav-pills">
+        <li class="list-item-inline"><a class="link link-active" href="/">Home</a></li>
+        <li class="list-item-inline"><a  class="link" href="/">products</a></li>
+        <li class="list-item-inline"><a  class="link" href="/">about</a></li>
     </ul>
 </nav>
 <hr>
 <h2>Header</h2>
-<header>
-    <img src="images/undraw_web_development_w2vv.svg">
-    <h1>heading inside header</h1>
+<header class="hero">
+    <img  class="hero-img" src="images/undraw_web_development_w2vv.svg">
+    <h1 class="hero-head">Harshitha <span class="head-inverted"> The Web developer</span></h1>
 </header>
 <hr>
 <h2>@section</h2>
