--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 </section>
 <hr>
 <h2>@footer</h2>
-<footer>
-    <div>Small heading insidde footer</div>
-    <ul>
-        <li>Sociallinks</li>
-        <li>social link2</li>
-        <li>Social link3</li>
+<footer class="footer">
+    <div class="footer-header">Small heading insidde footer</div>
+    <ul class="social-links list-non-bullet"> 
+        <li class="list-item-inline"> <a href="/">SocialOne</a></li>
+        <li class="list-item-inline"><a href="/">SocialTwo</a></li>
+        <li class="list-item-inline"><a href="/">SocialThree</a></li>
     </ul>
 </footer>
 </body>
