--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer class="footer">
     <div class="footer-header">Social media</div>
     <ul class="social-links list-non-bullet"> 
-        <li class="list-item-inline"> <a href="https://github.com/harshitha123kanikanti">Gitbuh</a></li>
+        <li class="list-item-inline"> <a href="https://github.com/harshitha123kanikanti">Github</a></li>
         <li class="list-item-inline"><a href="https://www.linkedin.com/in/harshitha-kanikanti-0944b6185/">LinkedIn</a></li>
         <li class="list-item-inline"><a href="/">Twitter</a></li>
     </ul>
