--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 </nav>
   <header class="hero">
     <!-- <img  class="hero-img" src="images/undraw_web_development_w2vv.svg"> -->
-    <h1 class="hero-head">Harshitha <span class="head-inverted">My Projects</span></h1>
+    <h1 class="hero-head">Harshitha <span class="head-inverted">-My Projects</span></h1>
 </header>
 <ol reversed>
     <div class="container  container-center margi">
